First draft abstract test class
Signed-off-by: HansKiller-TH <hanskiller@web.de>